--- a/dossier/app/components/can-ref-products/tpl-ref-product-list.html
+++ b/dossier/app/components/can-ref-products/tpl-ref-product-list.html
@@ -3,21 +3,20 @@
     <div class="col-xs-12 form-group">
 
         <!--<pre>crpl.productList : {{crpl.productList | json}}</pre>-->
-
-        <cmp-expanding-table title="Canadian Reference Product" list-items="crpl.productList"
-                             column-def="crpl.colNames" select-record="crlp.selectRecord"
-                             disable-selection="!crlp.isDetailValid">
-            <cmp-ref-product-details product-record="$parent.record" on-update="crlp.updateProduct(product)" delete-btn="true" ></cmp-ref-product-details>
+        <cmp-expanding-table title="{{'REF_PRODUCTS'|translate}}" list-items="crpl.productList"
+                             column-def="crpl.colNames" select-record="crpl.selectRecord"
+                             disable-selection="!crpl.isDetailValid">
+            <cmp-ref-product-details product-record="$parent.record" on-update="crpl.updateProduct($parent.$index,product)" on-delete="crpl.deleteProduct($parent.$index)" delete-btn="true" ></cmp-ref-product-details>
 
         </cmp-expanding-table>
 
-        <cmp-ref-product-details ng-if="crlp.newProductFormShown" on-add-new="crlp.addProduct(product)"  delete-btn="false"></cmp-ref-product-details>
+        <cmp-ref-product-details ng-if="crpl.newProductFormShown" on-add-product="crpl.addProduct(product)" on-cancel="crpl.newProductFormShown = false" delete-btn="false"></cmp-ref-product-details>
 
         <div class="mrgn-tp-md mrgn-bttm-lg">
             <div class="btn-group-sm col-md-12 text-right">
-                <input type="submit" value="{{'ADD_PRODUCT'|translate}}" class="btn btn-primary"
-                       data-ng-disabled="crlp.newProductFormShown"
-                       ng-click="crlp.newProductFormShown = true" />
+                <input type="submit" value="Add Product" class="btn btn-primary"
+                       data-ng-disabled="crpl.newProductFormShown"
+                       ng-click="crpl.newProductFormShown = true" />
             </div>
         </div>
     </div>
