--- a/dossier/app/components/formulations/tpl-active-ing-list.html
+++ b/dossier/app/components/formulations/tpl-active-ing-list.html
@@ -1,9 +1,22 @@
 <ng-form name="active-ing-list-form">
-    <cmp-expanding-table title="Active Ingredient List" list-items="ailCtrl.ingList"
+    <h2>{{'MEDICINAL_INGRED'|translate}}</h2>
+    <cmp-expanding-table title="{{'ACTIVE_LIST'|translate}}" list-items="ailCtrl.ingList"
                          column-def="ailCtrl.colNames" select-record="ailCtrl.selectRecord"
                          disable-selection="!ailCtrl.isDetailValid">
 
-        <cmp-active-ing-record record="$parent.record"></cmp-active-ing-record>
+        <cmp-active-ing-record record="$parent.record" on-update="ailCtrl.updateIng($parent.$index,ing)"
+                               on-delete="ailCtrl.deleteIng($parent.$index)" delete-btn="true"></cmp-active-ing-record>
 
     </cmp-expanding-table>
+
+    <cmp-active-ing-record ng-if="ailCtrl.newIngFormShown === true" on-add-ing="ailCtrl.addIng(ing)"
+                           on-cancel="ailCtrl.newIngFormShown = false" delete-btn="false"></cmp-active-ing-record>
+
+    <div class="mrgn-tp-md mrgn-bttm-lg">
+        <div class="btn-group-sm col-md-12 text-right">
+            <input type="submit" value="Add Ingredient" class="btn btn-primary"
+                   data-ng-disabled="ailCtrl.newIngFormShown"
+                   ng-click="ailCtrl.newIngFormShown = true"/>
+        </div>
+    </div>
 </ng-form>
