--- a/dossier/app/components/formulations/tpl-container-type-record.html
+++ b/dossier/app/components/formulations/tpl-container-type-record.html
@@ -1,35 +1,93 @@
-<ng-form name="container-type-form">
-
-    <div class="form-group col-md-3">
-        <label for="containerType"><span class="field-name">{{'CONTAINER_TYPE'|translate}}</span></label>
-        <input type="text" id="containerType" data-ng-model="ctrCtrl.ctModel.containerType"
-               class="form-control full-width" name="text" ng-required="true"/>
+<ng-form name="containerTypeForm">
+    <div class="container-fluid">
+        <fieldset>
+            <legend>{{'CONTAINER_TYPE_DETAILS'|translate}}</legend>
+            <div class="row">
+                <div class="form-group col-md-12">
+                    <label for="containerType"><span class="field-name">{{'CONTAINER_TYPE'|translate}}</span></label>
+                     <textarea id="containerType" data-ng-model="ctrCtrl.ctModel.containerType" maxlength="256" rows="3"
+                               class="form-control full-width" name="text" ng-required="true"></textarea>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-12">
+                    <label for="pckSize">
+                        <span class="field-name">{{'PACKAGE_SIZE'|translate}}</span>
+                        <strong id="animalHumanSourced-error" class="error"
+                                ng-if="ingRecCtrl.showError(ingRecCtrl.activeIngForm.animaHumanSourced.$invalid,ingRecCtrl.activeIngForm.animaHumanSourced.$touched)">
+                        <span class="label label-danger"
+                              ng-messages="ingRecCtrl.activeIngForm.animaHumanSourced.$error">
+                            <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
+                        </span>
+                        </strong>
+                    </label>
+                    <textarea id="pckSize" data-ng-model="ctrCtrl.ctModel.packageSize" maxlength="256" rows="3"
+                              class="form-control full-width" name="text" ng-required="true"></textarea>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 form-group">
+                    <fieldset>
+                        <legend>{{'SHELF_LIFE'| translate}}</legend>
+                        <div class="form-group col-md-6">
+                            <label for="shelfLifeYears"><span class="field-name">{{'SHELF_LIFE_YEARS'|translate}}</span></label>
+                            <input type="number" id="shelfLifeYears" data-ng-model="ctrCtrl.ctModel.shelfLifeYears"
+                                   only-digits only-max="4" size="4" class="form-control" name="shelfYears"/>
+                            <strong id="shelfYear-error" class="error"
+                                    ng-if="containerTypeForm.shelfYears.$invalid">
+                                <span class="label label-danger"
+                                      ng-messages="containerTypeForm.shelfYears.$error">
+                                 <span ng-message="invalid"><span translate="MSG_ERR_INVALID_NUM"></span></span>
+                                 </span>
+                            </strong>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="shelfLifeMonths"><span
+                                    class="field-name">{{'SHELF_LIFE_MONTHS'|translate}}</span></label>
+                            <input type="number" id="shelfLifeMonths" data-ng-model="ctrCtrl.ctModel.shelfLifeMonths"
+                                   only-digits only-max="4" class="form-control " name="shelfMonths" size="2"/>
+                            <strong id="shelfMonth-error" class="error"
+                                    ng-if="containerTypeForm.shelfMonths.$invalid">
+                        <span class="label label-danger"
+                              ng-messages="containerTypeForm.shelfMonths.$error">
+                            <span ng-message="invalid"><span translate="MSG_ERR_INVALID_NUM"></span></span>
+                        </span>
+                            </strong>
+                        </div>
+                    </fieldset>
+                </div>
+                <div class="col-md-6">
+                    <fieldset>
+                        <legend>{{'TEMP_RANGE'| translate}}</legend>
+                        <div class="form-group col-md-5">
+                            <label for="tempMin"><span class="field-name">{{'MIN_TEMP'|translate}}</span></label>
+                            <input type="number" id="tempMin" data-ng-model="ctrCtrl.ctModel.tempMin"
+                                   only-digits="intNeg" only-max="3" size="3"
+                                   class="form-control" name="tempMin"/>
+                            <strong id="minTemp-error" class="error"
+                                    ng-if="containerTypeForm.tempMin.$invalid">
+                                <span class="label label-danger"
+                                      ng-messages="containerTypeForm.tempMin.$error">
+                                 <span ng-message="invalid"><span translate="MSG_ERR_INVALID_NUM"></span></span>
+                                 </span>
+                            </strong>
+                        </div>
+                        <div class="form-group col-md-5">
+                            <label for="tempMax"><span class="field-name">{{'MAX_TEMP'|translate}}</span></label>
+                            <input type="number" id="tempMax" size="6" maxlength="3"
+                                   data-ng-model="ctrCtrl.ctModel.tempMax"
+                                   only-digits="intNeg" only-max="3" class="form-control" name="tempMax"/>
+                            <strong id="maxTemp-error" class="error"
+                                    ng-if="containerTypeForm.tempMax.$invalid">
+                                <span class="label label-danger"
+                                      ng-messages="containerTypeForm.tempMax.$error">
+                                 <span ng-message="invalid"><span translate="MSG_ERR_INVALID_NUM"></span></span>
+                                 </span>
+                            </strong>
+                        </div>
+                    </fieldset>
+                </div>
+            </div>
+        </fieldset>
     </div>
-    <div class="form-group col-md-3">
-        <label for="pckSize"><span class="field-name">{{'PACKAGE_SIZE'|translate}}</span></label>
-        <input type="text" id="pckSize" data-ng-model="ctrCtrl.ctModel.packageSize"
-               class="form-control full-width" name="text" ng-required="true"/>
-    </div>
-    <div class="form-group col-md-3">
-        <label for="shelfLifeYears"><span class="field-name">{{'SHELF_LIFE_YEARS'|translate}}</span></label>
-        <input type="text" id="shelfLifeYears" data-ng-model="ctrCtrl.ctModel.shelfLifeYears"
-               class="form-control full-width" name="text" ng-required="true"/>
-    </div>
-    <div class="form-group col-md-3">
-        <label for="shelfLifeMonths"><span class="field-name">{{'SHELF_LIFE_MONTHS'|translate}}</span></label>
-        <input type="text" id="shelfLifeMonths" data-ng-model="ctrCtrl.ctModel.shelfLifeMonths"
-               class="form-control full-width" name="text" ng-required="true"/>
-    </div>
-
-    <div class="form-group col-md-6">
-        <label for="tempMin"><span class="field-name">{{'MIN_TEMP'|translate}}</span></label>
-        <input type="text" id="tempMin" data-ng-model="ctrCtrl.ctModel.tempMin"
-               class="form-control full-width" name="text" ng-required="true"/>
-    </div>
-    <div class="form-group col-md-6">
-        <label for="tempMax"><span class="field-name">{{'MAX_TEMP'|translate}}</span></label>
-        <input type="text" id="tempMax" data-ng-model="ctrCtrl.ctModel.tempMax"
-               class="form-control full-width" name="text" ng-required="true"/>
-    </div>
-
 </ng-form>
