--- a/dossier/app/components/formulations/tpl-material-ing-record.html
+++ b/dossier/app/components/formulations/tpl-material-ing-record.html
@@ -1,25 +1,58 @@
-<ng-form name="material-ing-record-form">
+<ng-form name="mirCtrl.materialIngRecordForm">
+    <div class="container-fluid">
+        <fieldset>
+            <legend>{{'MATERIAL_DETAILS'|translate}}</legend>
+            <div class="row">
+                <div class="form-group col-md-12"
+                     ng-class="{'has-error':mirCtrl.materialIngRecordForm.matIngName.$invalid}">
+                    <label for="matIngName" class="required">
+                        <span class="field-name">{{'MATERIAL_NAME'|translate}}</span>
+                        <strong class="required">{{"REQUIRED" |translate}}</strong>
+                        <input type="text" id="matIngName" data-ng-model="mirCtrl.mirModel.ingredientName"
+                               maxlength="100" size="100" ng-required="true"
+                               class="form-control" name="matIngName" ng-required="true"/>
+                        <strong id="msterialName-error" class="error"
+                                ng-if="mirCtrl.showError(mirCtrl.materialIngRecordForm.matIngName.$invalid,mirCtrl.materialIngRecordForm.matIngName.$touched)">
+                            <span class="label label-danger" ng-messages="mirCtrl.materialIngRecordForm.inFinal.$error">
+                                <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
+                            </span>
+                        </strong>
+                    </label>
+                </div>
+            </div>
 
-    <div class="form-group col-md-12">
-        <label for="matIngName"><span class="field-name">{{'MATERIAL_NAME'|translate}}</span></label>
-        <input type="text" id="matIngName" data-ng-model="mirCtrl.mirModel.ingredientName"
-               class="form-control full-width" name="text" ng-required="true"/>
+            <div class="row">
+                <div class="form-group col-md-2">
+                    <label for="cas"><span class="field-name">{{'CAS_NUM'|translate}}</span></label>
+                    <input type="text" id="cas" data-ng-model="mirCtrl.mirModel.cas"
+                           class="form-control" name="casNum" maxlength="12" size="12"/>
+                </div>
+                <div class="form-group col-md-4">
+                    <label for="standard"><span class="field-name">{{'STANDARD'|translate}}</span></label>
+                    <input type="text" id="standard" data-ng-model="mirCtrl.mirModel.ingredientStandard"
+                           class="form-control" name="stamdard" maxlength="40" size="40"/>
+                </div>
+                <div class="form-group col-lg-4 col-md-4 col-sm-4 col-xs-12"
+                     ng-class="{'has-error':mirCtrl.materialIngRecordForm.inFinal.$invalid}">
+                    <label for="inFinalContainer" class="required">
+                        <span class="field-name">{{'IN_FINAL_CONTAINER'|translate}}</span>
+                        <strong class="required">{{"REQUIRED" |translate}}</strong>
+                        <select id="inFinalContainer" ng-model="mirCtrl.mirModel.inFinalContainer"
+                                ng-required="true"
+                                class="form-control" name="inFinal"
+                                ng-options="val |translate for val in  mirCtrl.yesNoList">
+                        </select>
+                        <strong id="inFinalContainer-error" class="error"
+                                ng-if="mirCtrl.showError(mirCtrl.materialIngRecordForm.inFinal.$invalid,mirCtrl.materialIngRecordForm.inFinal.$touched)">
+                        <span class="label label-danger"
+                              ng-messages="mirCtrl.materialIngRecordForm.inFinal.$error">
+                            <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
+                        </span>
+                        </strong>
+                    </label>
+                </div>
+            </div>
+        </fieldset>
     </div>
-    <div class="form-group col-md-3">
-        <label for="cas"><span class="field-name">{{'CAS'|translate}}</span></label>
-        <input type="text" id="cas" data-ng-model="mirCtrl.mirModel.cas"
-               class="form-control full-width" name="text" ng-required="true"/>
-    </div>
-    <div class="form-group col-md-3">
-        <label for="standard"><span class="field-name">{{'STANDARD'|translate}}</span></label>
-        <input type="text" id="standard" data-ng-model="mirCtrl.mirModel.ingredientStandard"
-               class="form-control full-width" name="text" ng-required="true"/>
-    </div>
-
-    <div class="form-group col-lg-3 col-md-3 col-sm-3 col-xs-12 text-right mrgn-tp-lg">
-        <label class="form-checkbox form-label-inline" for="inContainer">
-            <input type="checkbox" name="as-base" ng-model="mirCtrl.mirModel.inFinalContainer" id="inContainer">{{'IN_FINAL_CONTAINER'|translate}}
-        </label>
-    </div>
-
 </ng-form>
+
