--- a/dossier/app/components/formulations/tpl-non-med-ing-list.html
+++ b/dossier/app/components/formulations/tpl-non-med-ing-list.html
@@ -1,9 +1,24 @@
 <ng-form name="non-med-ing-list-form">
+    <h2>{{'NONMEDICINAL_INGRED'|translate}}</h2>
     <cmp-expanding-table title="Non Medicinal Ingredient List" list-items="nmilCtrl.ingList"
                          column-def="nmilCtrl.colNames" select-record="nmilCtrl.selectRecord"
                          disable-selection="!nmilCtrl.isDetailValid">
 
-        <cmp-non-med-ing-record record="$parent.record"></cmp-non-med-ing-record>
+        <cmp-non-med-ing-record record="$parent.record" on-update="nmilCtrl.updateIng($parent.$index,product)"
+                                on-delete="nmilCtrl.deleteIng($parent.$index)"
+                                delete-btn="true"></cmp-non-med-ing-record>
 
     </cmp-expanding-table>
+
+    <cmp-non-med-ing-record ng-if="nmilCtrl.newIngFormShown === true" on-add-ing="nmilCtrl.addIng(ing)"
+                            on-cancel="nmilCtrl.newIngFormShown = false" delete-btn="false"></cmp-non-med-ing-record>
+
+    <div class="mrgn-tp-md mrgn-bttm-lg">
+        <div class="btn-group-sm col-md-12 text-right">
+            <input type="submit" value="Add Ingredient" class="btn btn-primary"
+                   data-ng-disabled="nmilCtrl.newIngFormShown"
+                   ng-click="nmilCtrl.newIngFormShown = true"/>
+        </div>
+    </div>
+
 </ng-form>
