--- a/dossier/app/components/formulations/tpl-non-med-ing-record.html
+++ b/dossier/app/components/formulations/tpl-non-med-ing-record.html
@@ -1,83 +1,161 @@
-<ng-form name="non-med-ing-form">
-
-    <div class="form-group col-md-6">
-        <label for="variant-id" class="required"><span class="field-name">{{'VARIANT_ID'|translate}}</span>
-            <strong class="required">{{"REQUIRED" |translate}}</strong></label>
-        <input type="text" id="variant-id" data-ng-model="ingRecCtrl.ingModel.varId"
-               class="form-control full-width" name="text" ng-required="true" maxlength="60" size="60"/>
-
+<ng-form name="nIngRecCtrl.nonMedIngForm">
+    <div class="container-fluid">
+        <fieldset>
+            <legend>{{'NONMEDICINAL_INGRED_DETAILS'|translate}}</legend>
+            <div class="row">
+                <div class="form-group col-md-6">
+                    <label for="variant-id"><span class="field-name">{{'VARIANT_NAME'|translate}}</span>
+                        <input type="text" id="variant-id" data-ng-model="nIngRecCtrl.ingModel.varId"
+                               class="form-control full-width" name="text" maxlength="100" size="100"/>
+                    </label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-12"
+                     ng-class="{'has-error':nIngRecCtrl.nonMedIngForm.nonmedName.$invalid}">
+                    <label for="ing-name" class="required"><span class="field-name">{{'ING_NAME'|translate}}</span>
+                        <strong class="required">{{"REQUIRED" |translate}}</strong>
+                        <input type="text" id="ing-name" data-ng-model="nIngRecCtrl.ingModel.ingName"
+                               class="form-control full-width" name="nonmedName" ng-required="true" maxlength="100"
+                               size="100"/>
+                        <strong id="ingredientName-error" class="error"
+                                ng-if="nIngRecCtrl.showError(nIngRecCtrl.nonMedIngForm.nonmedName.$invalid,nIngRecCtrl.nonMedIngForm.nonmedName.$touched)">
+                                    <span class="label label-danger"
+                                          ng-messages="nIngRecCtrl.nonMedIngForm.nonmedName.$error">
+                                        <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
+                                    </span>
+                        </strong>
+                    </label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-3">
+                    <label for="cas"><span class="field-name">{{'CAS'|translate}}</span></label>
+                    <input type="text" id="cas" data-ng-model="nIngRecCtrl.ingModel.cas" maxlength="12" size="12"
+                           class="form-control full-width" name="casNum"/>
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="standard"><span class="field-name">{{'STANDARD'|translate}}</span></label>
+                    <input type="text" id="standard" data-ng-model="nIngRecCtrl.ingModel.standard"
+                           class="form-control full-width" name="standard" maxlength="40" size="40"/>
+                </div>
+                <div class="form-group col-md-3" ng-class="{'has-error':nIngRecCtrl.nonMedIngForm.strength.$invalid}">
+                    <label for="strength" class="required"><span class="field-name">{{'STRENGTH'|translate}}</span>
+                        <strong class="required">{{"REQUIRED" |translate}}</strong>
+                        <input type="text" id="strength" data-ng-model="nIngRecCtrl.ingModel.strength"
+                               class="form-control full-width" name="strength" ng-required="true" size="15"
+                               maxlength="15"/>
+                        <strong id="strength-error" class="error"
+                                ng-if="nIngRecCtrl.showError(nIngRecCtrl.nonMedIngForm.strength.$invalid,nIngRecCtrl.nonMedIngForm.strength.$touched)">
+                                    <span class="label label-danger"
+                                          ng-messages="nIngRecCtrl.nonMedIngForm.strength.$error">
+                                        <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
+                                    </span>
+                        </strong>
+                    </label>
+                </div>
+                <div class="form-group col-md-3" ng-class="{'has-error':nIngRecCtrl.nonMedIngForm.nmUnits.$invalid}">
+                    <label for="units" class="required"><span class="field-name">{{'UNITS'|translate}}</span>
+                        <strong class="required">{{"REQUIRED" |translate}}</strong>
+                        <input type="text" id="units" data-ng-model="nIngRecCtrl.ingModel.units"
+                               class="form-control full-width" name="nmUnits" ng-required="true" maxlength="40"
+                               size="40"/>
+                        <strong id="nm-unit-error" class="error"
+                                ng-if="nIngRecCtrl.showError(nIngRecCtrl.nonMedIngForm.nmUnits.$invalid,nIngRecCtrl.nonMedIngForm.nmUnits.$touched)">
+                                    <span class="label label-danger"
+                                          ng-messages="nIngRecCtrl.nonMedIngForm.nmUnits.$error">
+                                        <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
+                                    </span>
+                        </strong>
+                    </label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-md-4">
+                    <label for="per"><span class="field-name">{{'PER'|translate}}</span></label>
+                    <input type="text" id="per" data-ng-model="nIngRecCtrl.ingModel.per"
+                           class="form-control" name="perVal" maxlength="40" size="40"/>
+                </div>
+                <div class="form-group col-md-3" ng-class="{'has-error':nIngRecCtrl.nonMedIngForm.nanoFld.$invalid}">
+                    <label for="nanoMaterial" class="required">
+                        <span class="field-name">{{'NANO_MATERIAL'|translate}}</span>
+                        <strong class="required">{{"REQUIRED" |translate}}</strong></label>
+                    <select id="nanoMaterial" ng-model="nIngRecCtrl.ingModel.nanoMaterial"
+                            class="form-control full-width" name="nanoFld" ng-required="true"
+                            ng-options="nano |translate for nano in  nIngRecCtrl.nanoMaterialList| orderByTranslated">
+                    </select>
+                    <strong id="nanoMaterial-error" class="error"
+                            ng-if="nIngRecCtrl.showError(nIngRecCtrl.nonMedIngForm.nanoFld.$invalid,nIngRecCtrl.nonMedIngForm.nanoFld.$touched)">
+                        <span class="label label-danger"
+                              ng-messages="nIngRecCtrl.nonMedIngForm.nanoFld.$error">
+                            <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
+                        </span>
+                    </strong>
+                </div>
+                <div class="form-group col-md-5" ng-if="nIngRecCtrl.isNanoOther()"
+                     ng-class="{'has-error':nIngRecCtrl.nonMedIngForm.nanoOtherFld.$invalid}">
+                    <label for="nanoMaterialOther" class="required">
+                        <span class="field-name">{{'NANO_MATERIAL_OTHER'|translate}}</span>
+                        <strong class="required">{{"REQUIRED" |translate}}</strong></label>
+                    <input type="text" id="nanoMaterialOther" data-ng-model="nIngRecCtrl.ingModel.nanoMaterialOther"
+                           class="form-control full-width" name="nanoOtherFld" ng-required="true" maxlength="40"/>
+                    <strong id="nanoMaterialOther-error" class="error"
+                            ng-if="nIngRecCtrl.showError(nIngRecCtrl.nonMedIngForm.nanoOtherFld.$invalid,nIngRecCtrl.nonMedIngForm.nanoOtherFld.$touched)">
+                        <span class="label label-danger"
+                              ng-messages="nIngRecCtrl.nonMedIngForm.nanoOtherFld.$error">
+                            <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
+                        </span>
+                    </strong>
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col-lg-4 col-md-4 col-sm-4 col-xs-12"
+                     ng-class="{'has-error':nIngRecCtrl.nonMedIngForm.asBase.$invalid}">
+                    <label for="asBase" class="required">
+                        <span class="field-name">{{'CALCULATED_AS_BASE'|translate}}</span>
+                        <strong class="required">{{"REQUIRED" |translate}}</strong>
+                        <select id="asBase" ng-model="nIngRecCtrl.ingModel.calcAsBase"
+                                class="form-control" name="asBase" ng-required="true"
+                                ng-options="val |translate for val in  nIngRecCtrl.yesNoList">
+                        </select>
+                        <strong id="asBase-error" class="error"
+                                ng-if="nIngRecCtrl.showError(nIngRecCtrl.nonMedIngForm.asBase.$invalid,nIngRecCtrl.nonMedIngForm.asBase.$touched)">
+                        <span class="label label-danger"
+                              ng-messages="nIngRecCtrl.nonMedIngForm.asBase.$error">
+                            <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
+                        </span>
+                        </strong>
+                    </label>
+                </div>
+                <div class="form-group col-lg-4 col-md-4 col-sm-4 col-xs-12"
+                     ng-class="{'has-error':nIngRecCtrl.nonMedIngForm.animaHumanSourced.$invalid}">
+                    <label for="asBase" class="required">
+                        <span class="field-name">{{'ANIMAL_HUMAN_SOURCED'|translate}}}</span>
+                        <strong class="required">{{"REQUIRED" |translate}}</strong>
+                        <select id="animalHumanSourced" ng-model="nIngRecCtrl.ingModel.animalHumanSourced"
+                                class="form-control" name="animaHumanSourced" ng-required="true"
+                                ng-options="val |translate for val in  nIngRecCtrl.yesNoList">
+                        </select>
+                        <strong id="animalHumanSourced-error" class="error"
+                                ng-if="nIngRecCtrl.showError(nIngRecCtrl.nonMedIngForm.animaHumanSourced.$invalid,nIngRecCtrl.nonMedIngForm.animaHumanSourced.$touched)">
+                        <span class="label label-danger"
+                              ng-messages="nIngRecCtrl.nonMedIngForm.animaHumanSourced.$error">
+                            <span ng-message="required"><span translate="MSG_ERR_MAND"></span></span>
+                        </span>
+                        </strong>
+                    </label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="btn-group-sm col-xs-12 text-right">
+                    <input type="submit" value="Save" class="btn btn-primary"
+                           ng-click="nIngRecCtrl.saveIng()"/>
+                    <input type="submit" ng-if="nIngRecCtrl.deleteBtn === true" value="Delete" class="btn btn-danger"
+                           ng-click="nIngRecCtrl.delete()"/>
+                    <input type="submit" value="Discard Changes" class="btn btn-default"
+                           ng-click="nIngRecCtrl.discardChanges()">
+                </div>
+            </div>
+        </fieldset>
     </div>
-
-    <div class="form-group col-md-12">
-        <label for="ing-name" class="required"><span class="field-name">{{'ING_NAME'|translate}}</span>
-            <strong class="required">{{"REQUIRED" |translate}}</strong></label>
-        <input type="text" id="ing-name" data-ng-model="ingRecCtrl.ingModel.ingName"
-               class="form-control full-width" name="text" ng-required="true" maxlength="60" size="60"/>
-
-    </div>
-
-    <div class="form-group col-md-3">
-        <label for="cas"><span class="field-name">{{'CAS'|translate}}</span></label>
-        <input type="text" id="cas" data-ng-model="ingRecCtrl.ingModel.cas"
-               class="form-control full-width" name="text" ng-required="true"/>
-    </div>
-    <div class="form-group col-md-3">
-        <label for="standard"><span class="field-name">{{'STANDARD'|translate}}</span></label>
-        <input type="text" id="standard" data-ng-model="ingRecCtrl.ingModel.standard"
-               class="form-control full-width" name="text" ng-required="true"/>
-    </div>
-    <div class="form-group col-md-3">
-        <label for="strength" class="required"><span class="field-name">{{'STRENGTH'|translate}}</span>
-            <strong class="required">{{"REQUIRED" |translate}}</strong></label>
-        <input type="text" id="strength" data-ng-model="ingRecCtrl.ingModel.strength"
-               class="form-control full-width" name="text" ng-required="true"/>
-    </div>
-    <div class="form-group col-md-3">
-        <label for="units" class="required"><span class="field-name">{{'UNITS'|translate}}</span>
-            <strong class="required">{{"REQUIRED" |translate}}</strong></label>
-        <input type="text" id="units" data-ng-model="ingRecCtrl.ingModel.units"
-               class="form-control full-width" name="text" ng-required="true"/>
-    </div>
-
-    <div class="form-group col-md-12">
-        <label for="per"><span class="field-name">{{'PER'|translate}}</span></label>
-        <input type="text" id="per" data-ng-model="ingRecCtrl.ingModel.per"
-               class="form-control full-width" name="text" ng-required="true"/>
-
-    </div>
-
-    <div class="form-group col-md-6">
-        <label for="nanoMaterial" class="required"><span class="field-name">{{'NANO_MATERIAL'|translate}}</span>
-            <strong class="required">{{"REQUIRED" |translate}}</strong></label>
-
-        <select id="nanoMaterial" ng-model="ingRecCtrl.ingModel.nanoMaterial" class="form-control full-width">
-            <option>No</option>
-            <option>Yes</option>
-            <option>Other</option>
-        </select>
-    </div>
-
-    <div class="form-group col-md-6" ng-if="ingRecCtrl.ingModel.nanoMaterial === 'Other'">
-        <label for="nanoMaterialOther" class="required"><span
-                class="field-name">{{'NANO_MATERIAL_OTHER'|translate}}</span>
-            <strong class="required">{{"REQUIRED" |translate}}</strong></label>
-        <input type="text" id="nanoMaterialOther" data-ng-model="ingRecCtrl.ingModel.nanoMaterialOther"
-               class="form-control full-width" name="text" ng-required="true"/>
-
-    </div>
-    <div class="form-group col-md-12">
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <label class="form-checkbox form-label-inline" for="asBase">
-                <input type="checkbox" name="as-base" ng-model="ingRecCtrl.ingModel.calcAsBase" id="asBase">{{'CALCULATED_AS_BASE'|translate}}
-            </label>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-            <label class="form-checkbox form-label-inline" for="animalHumanSourced">
-                <input type="checkbox" name="animal-human-sourced" ng-model="ingRecCtrl.ingModel.animalHumanSourced"
-                       id="animalHumanSourced">{{'ANIMAL_HUMAN_SOURCED'|translate}}
-            </label>
-        </div>
-
-    </div>
-
 </ng-form>
