--- a/dossier/app/components/dossier/tpl-dossier.html
+++ b/dossier/app/components/dossier/tpl-dossier.html
@@ -166,5 +166,5 @@
             </div>
         </section>
     </div>
-    <pre>{{dos.dossierModel | json }}</pre>
+   <!-- <pre>{{dos.dossierModel | json }}</pre>-->
 </ng-form>
